--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,11 @@
 
             const body = { id_token: response.credential }
 
-            fetch(window.location.hostname.includes('localhost')
-                ?'http://localhost:8080/api/auth/google'
-                :'https://apinodebase.herokuapp.com/api/auth/google',
-                {
+            let url = ( window.location.hostname.includes('localhost') )
+                    ? 'http://localhost:8080/api/auth/google'
+                    : 'https://apinodebase.herokuapp.com/api/auth/google';
+
+            fetch(url, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
