--- a/public/index.html
+++ b/public/index.html
@@ -5,76 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceso denegado</title>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
-<body>
-    <h1>Hola mundo</h1>
+<body class="container">
+    
+    <div class="row mt-5">
+        <div class="col-sm-6">
+            <h1>Google Signin</h1>
+            <hr>
+            <br>
+            <div id="g_id_onload"
+            data-client_id="518456059830-7sjvpgq28su3cv4lfh5mtklmbfhkeioe.apps.googleusercontent.com"
+            data-auto_prompt="false"
+            data-callback="handleCredentialResponse">
+         </div>
+         <div class="g_id_signin"
+            data-type="standard"
+            data-size="large"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-shape="rectangular"
+            data-logo_alignment="left">
+         </div>
 
-    <hr>
+         <br>
+         <button id="google_signout">
+            Signout
+        </button>
+        </div>
 
-    <div id="g_id_onload"
-         data-client_id="518456059830-7sjvpgq28su3cv4lfh5mtklmbfhkeioe.apps.googleusercontent.com"
-         data-auto_prompt="false"
-         data-callback="handleCredentialResponse">
-      </div>
-      <div class="g_id_signin"
-         data-type="standard"
-         data-size="large"
-         data-theme="outline"
-         data-text="sign_in_with"
-         data-shape="rectangular"
-         data-logo_alignment="left">
-      </div>
+        <div class="col-sm-6">
+
+            <h1>Login manual</h1>
+            <hr>
+
+            <form class="d-grid">
+                <input type="text" name="correo" class="form-control mb-2" placeholder="Correo">
+                <input type="text" name="password" class="form-control mb-2" placeholder="Password">
+                <button type="submit" class="btn btn-primary" >
+                    Ingresar
+                </button>
+            </form>
+        </div>
+    </div>
+
+   
 
 
-      <button id="google_signout">
-        Signout
-      </button>
-
-
+    <script src="./js/auth.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 
-    <script>
-        function handleCredentialResponse(response) {
-          
-            //Google Token : ID_TOKEN
 
-            const body = { id_token: response.credential }
-
-            let url = ( window.location.hostname.includes('localhost') )
-                    ? 'http://localhost:8080/api/auth/google'
-                    : 'https://apinodebase.herokuapp.com/api/auth/google';
-
-            fetch(url, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(body)
-            })
-            .then( resp => resp.json() )
-            .then( resp => {
-                localStorage.setItem('email', resp.usuario.correo)
-            } )
-            .catch( console.warn )
-        }
-
-
-        const button = document.getElementById('google_signout');
-
-        button.onclick = () => {
-
-            google.accounts.id.disableAutoSelect()
-
-            google.accounts.id.revoke( localStorage.getItem('email'), done => {
-                localStorage.clear();
-                location.reload()
-            } )
-
-        }
-
-
-
-      </script>
 </body>
 </html>
